# icp-pulse

./: .deploy_frontend.sh  .gitignore  .ic-assets.json  01_Plan_Funding.md  ADMIN_AIRDROP_INTERFACE.md  ADMIN_SETUP_GUIDE.md  ADMIN_UI_GUIDE.md  ANALYTICS_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  AUTO_ALLOCATION_GUIDE.md  BACKEND_UPDATE_SUMMARY.md  BURN_EXCESS_TOKENS.md  BURN_STRATEGY.md  COMPLETE_TOKEN_HOLDERS_ANALYSIS.md  CORRECTED_TOKEN_ALLOCATION_REPORT.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DEVELOP.md  EARLY_ADOPTER_CAMPAIGN_GUIDE.md  FINAL_TOKEN_INVESTIGATION_REPORT.md  FIX_ALLOCATION.md  FIX_BURN_ISSUE.md  FRONTEND_AIRDROP_GUIDE.md  MAINNET_DEPLOYMENT_INFO.md  POLL_WIZARD_IMPLEMENTATION_GUIDE.md  README.md  RECOVERY_PLAN.md  STAKING_IMPLEMENTATION.md  TOKEN_AUDIT_REPORT.md  TOKEN_HOLDERS_REPORT.md  TPOLLS.md  TRANSACTION_TRACKING.md  canister_ids.json  check-canister-status.sh  dfx.json  mops.toml  package-lock.json  package.json
backend/: airdrop.mo  polls_surveys_backend.mo  pulseg.mo  staking.mo  swap.mo  tokenmania.mo
canisters/funding_hub/: README.md  funding_hub.did  main.mo
canisters/mytoken_ledger/: Cargo.toml  README.md  build.rs  init.json  ledger.did  setup-principals.sh
canisters/mytoken_ledger/src/: lib.rs  main.rs
canisters/mytoken_ledger/tests/: ledger_smoke.md
docs/: ido-quest-campaign-guide.md  online_survey_software_market_report.md  points-based-quest-system.md  quest-system.md
frontend/: .env.example  .env.local.example  .gitignore  .ic-assets.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdminGuard.tsx  AnalyticsProvider.tsx  IcpAuthProvider.tsx  LoginButton.tsx  Providers.tsx  ScopeBadge.tsx  ThemeToggle.tsx  UserMenu.tsx  WalletBalance.tsx  ai-chatbox.tsx  liquidity-dashboard.tsx  token-stats-dashboard.tsx
frontend/lib/: admin-config.ts  analytics.ts  icp.ts  icrc2.idl.ts  known-principals.ts  polls_surveys_backend.idl.ts  premium.ts  schema.ts  staking.ts  (+5 more)
frontend_old/: tailwind.config.ts  tsconfig.json
frontend_v2/: index.html
scripts/: analyze-holders.sh  burn-excess-tokens.sh  burn-to-1billion.sh  check-token-holders.sh  init-quests.sh  setup-ido-quest-campaign.sh  sync-env.mjs
(+106 files in other folders)
